# recipe-app-api

./: .dockerignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.dev.txt  requirements.txt
.github/workflows/: checks.yml
app/app/: settings.py  urls.py
app/core/: admin.py  models.py
app/core/management/commands/: wait_for_db.py
app/core/migrations/: 0001_initial.py
app/core/tests/: test_commands.py  test_models.py
app/user/tests/: test_user_api.py
